--- a/Exoplanet_Detection_NN.ipynb
+++ b/Exoplanet_Detection_NN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsQTLMaIZpQB5IZqGzzx4U",
+      "authorship_tag": "ABX9TyPd0AwTM/dvrI4qleQJkhfu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 23,
       "metadata": {
         "id": "KFd6k16IGIT9"
       },
@@ -51,9 +51,9 @@
           "height": 270
         },
         "id": "BX3okFZCGT4A",
-        "outputId": "5f526624-d363-4e2f-d5be-2e8f8447fc48"
+        "outputId": "2eab2b99-68e6-45f0-856e-5f21251ea8dc"
       },
-      "execution_count": 173,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7ff08964-04d0-4323-83ef-177a3a70a671\">\n",
+              "  <div id=\"df-b3140ddf-3475-4238-b83b-90b293183c6c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -479,7 +479,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ff08964-04d0-4323-83ef-177a3a70a671')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3140ddf-3475-4238-b83b-90b293183c6c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -530,12 +530,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7ff08964-04d0-4323-83ef-177a3a70a671 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b3140ddf-3475-4238-b83b-90b293183c6c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7ff08964-04d0-4323-83ef-177a3a70a671');\n",
+              "          const element = document.querySelector('#df-b3140ddf-3475-4238-b83b-90b293183c6c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -558,7 +558,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 173
+          "execution_count": 24
         }
       ]
     },
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "3f7vOP_3H2rt"
       },
-      "execution_count": 174,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -586,7 +586,7 @@
       "metadata": {
         "id": "XeEDCGRA1KS_"
       },
-      "execution_count": 175,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -597,7 +597,7 @@
       "metadata": {
         "id": "bAcFVcimRgW5"
       },
-      "execution_count": 176,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "nc8AbLPaSKcA"
       },
-      "execution_count": 177,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -619,7 +619,7 @@
       "metadata": {
         "id": "beSmwyozSOKR"
       },
-      "execution_count": 178,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -635,9 +635,9 @@
           "height": 270
         },
         "id": "onIWDg84Nq0d",
-        "outputId": "5d98cabf-48b1-4593-96c7-10f2615cbc29"
+        "outputId": "2f860991-ddfd-4291-db08-f3e1e4d75873"
       },
-      "execution_count": 179,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0a1fe989-fe17-4d3b-9ea4-71d6835da864\">\n",
+              "  <div id=\"df-2bfcf7ad-6140-4850-a8a5-16b15d4bb866\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -933,7 +933,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a1fe989-fe17-4d3b-9ea4-71d6835da864')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bfcf7ad-6140-4850-a8a5-16b15d4bb866')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -984,12 +984,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0a1fe989-fe17-4d3b-9ea4-71d6835da864 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2bfcf7ad-6140-4850-a8a5-16b15d4bb866 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0a1fe989-fe17-4d3b-9ea4-71d6835da864');\n",
+              "          const element = document.querySelector('#df-2bfcf7ad-6140-4850-a8a5-16b15d4bb866');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1012,7 +1012,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 179
+          "execution_count": 30
         }
       ]
     },
@@ -1024,7 +1024,7 @@
       "metadata": {
         "id": "xDIfvam-QxQ2"
       },
-      "execution_count": 180,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1038,7 +1038,7 @@
       "metadata": {
         "id": "_PM0GUI6RItM"
       },
-      "execution_count": 181,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1052,7 +1052,7 @@
       "metadata": {
         "id": "wYuVS6jL0BHb"
       },
-      "execution_count": 182,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1067,7 +1067,7 @@
       "metadata": {
         "id": "TF97gF5pnFTa"
       },
-      "execution_count": 183,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1079,7 +1079,7 @@
       "metadata": {
         "id": "PbOnecUPR9tf"
       },
-      "execution_count": 184,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1092,9 +1092,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zE2_RwJlDK9E",
-        "outputId": "c01d3698-7d23-445f-87e2-f8a441c16ad2"
+        "outputId": "ed61ea1a-b4fa-4b8c-e9ed-479e1a33e2d0"
       },
-      "execution_count": 185,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1104,7 +1104,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 185
+          "execution_count": 36
         }
       ]
     },
@@ -1119,7 +1119,7 @@
       "metadata": {
         "id": "TDCls_o3SC5i"
       },
-      "execution_count": 186,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1142,7 +1142,7 @@
       "metadata": {
         "id": "Gz3krX2eSPGv"
       },
-      "execution_count": 187,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1153,7 +1153,7 @@
       "metadata": {
         "id": "yrnQCjmSSqxZ"
       },
-      "execution_count": 188,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1168,20 +1168,18 @@
       "metadata": {
         "id": "0RuAwSJ3Sv8l"
       },
-      "execution_count": 189,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "epochs = 1001\n",
-        "\n",
-        "epoch_data = []"
+        "epochs = 1001"
       ],
       "metadata": {
         "id": "fUJ0RVy0S28n"
       },
-      "execution_count": 190,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1205,53 +1203,43 @@
         "\n",
         "  # accuracy\n",
         "  accuracy = torch.sum(pred == y_test.data).item() / y_test.size(0)\n",
-        "  epoch_data.append([epoch, loss.data.item(), loss_test.data.item(), accuracy])\n",
         "\n",
         "  if epoch % 50 == 0:\n",
-        "    print ('epoch - %d (%d%%) train loss - %.2f test loss - %.2f accuracy - %.4f' \\\n",
-        "           % (epoch, epoch/150 * 10 , loss.data.item(), loss_test.data.item(), accuracy))"
+        "    print (f'epoch: {epoch} || train loss: {loss} || test loss: {loss_test} || accuracy: {accuracy}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HcPIT4qLS-iK",
-        "outputId": "1a098dbb-5e2c-4570-953e-23cc56f7c7af"
+        "outputId": "590b95d7-c21a-47fd-f5a8-918cf3561c13"
       },
-      "execution_count": 191,
+      "execution_count": 49,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.8/dist-packages/torch/nn/functional.py:1967: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
-            "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "epoch - 50 (3%) train loss - 0.66 test loss - 0.66 accuracy - 0.6586\n",
-            "epoch - 100 (6%) train loss - 0.64 test loss - 0.64 accuracy - 0.6598\n",
-            "epoch - 150 (10%) train loss - 0.61 test loss - 0.61 accuracy - 0.6611\n",
-            "epoch - 200 (13%) train loss - 0.58 test loss - 0.59 accuracy - 0.6618\n",
-            "epoch - 250 (16%) train loss - 0.56 test loss - 0.57 accuracy - 0.6970\n",
-            "epoch - 300 (20%) train loss - 0.53 test loss - 0.54 accuracy - 0.7431\n",
-            "epoch - 350 (23%) train loss - 0.50 test loss - 0.51 accuracy - 0.7707\n",
-            "epoch - 400 (26%) train loss - 0.47 test loss - 0.48 accuracy - 0.7950\n",
-            "epoch - 450 (30%) train loss - 0.44 test loss - 0.46 accuracy - 0.8142\n",
-            "epoch - 500 (33%) train loss - 0.41 test loss - 0.42 accuracy - 0.8277\n",
-            "epoch - 550 (36%) train loss - 0.39 test loss - 0.39 accuracy - 0.8354\n",
-            "epoch - 600 (40%) train loss - 0.36 test loss - 0.37 accuracy - 0.8430\n",
-            "epoch - 650 (43%) train loss - 0.34 test loss - 0.35 accuracy - 0.8571\n",
-            "epoch - 700 (46%) train loss - 0.31 test loss - 0.33 accuracy - 0.8706\n",
-            "epoch - 750 (50%) train loss - 0.29 test loss - 0.29 accuracy - 0.8796\n",
-            "epoch - 800 (53%) train loss - 0.31 test loss - 0.27 accuracy - 0.8898\n",
-            "epoch - 850 (56%) train loss - 0.23 test loss - 0.24 accuracy - 0.9097\n",
-            "epoch - 900 (60%) train loss - 0.21 test loss - 0.22 accuracy - 0.9244\n",
-            "epoch - 950 (63%) train loss - 0.21 test loss - 0.21 accuracy - 0.9206\n",
-            "epoch - 1000 (66%) train loss - 0.19 test loss - 0.19 accuracy - 0.9347\n"
+            "epoch: 50 || train loss: 0.15315647423267365 || test loss: 0.14404267072677612 || accuracy: 0.9628443305573351\n",
+            "epoch: 100 || train loss: 0.12857767939567566 || test loss: 0.12161324173212051 || accuracy: 0.9666880204996797\n",
+            "epoch: 150 || train loss: 0.1170097216963768 || test loss: 0.14645156264305115 || accuracy: 0.9660474055092889\n",
+            "epoch: 200 || train loss: 0.08938217163085938 || test loss: 0.08456077426671982 || accuracy: 0.9782190903267136\n",
+            "epoch: 250 || train loss: 0.07448196411132812 || test loss: 0.0749717503786087 || accuracy: 0.982703395259449\n",
+            "epoch: 300 || train loss: 0.0687108188867569 || test loss: 0.06776829063892365 || accuracy: 0.982703395259449\n",
+            "epoch: 350 || train loss: 0.16304448246955872 || test loss: 0.17694440484046936 || accuracy: 0.9461883408071748\n",
+            "epoch: 400 || train loss: 0.0714753195643425 || test loss: 0.07015134394168854 || accuracy: 0.982703395259449\n",
+            "epoch: 450 || train loss: 0.06310828030109406 || test loss: 0.06376880407333374 || accuracy: 0.9852658552210122\n",
+            "epoch: 500 || train loss: 0.07603247463703156 || test loss: 0.06558011472225189 || accuracy: 0.9833440102498399\n",
+            "epoch: 550 || train loss: 0.056692901998758316 || test loss: 0.05807708576321602 || accuracy: 0.9839846252402307\n",
+            "epoch: 600 || train loss: 0.055932581424713135 || test loss: 0.06550461053848267 || accuracy: 0.9839846252402307\n",
+            "epoch: 650 || train loss: 0.05120239779353142 || test loss: 0.05275433883070946 || accuracy: 0.9839846252402307\n",
+            "epoch: 700 || train loss: 0.05041516572237015 || test loss: 0.07151948660612106 || accuracy: 0.9782190903267136\n",
+            "epoch: 750 || train loss: 0.04728306084871292 || test loss: 0.055078983306884766 || accuracy: 0.9852658552210122\n",
+            "epoch: 800 || train loss: 0.04329220578074455 || test loss: 0.04648005589842796 || accuracy: 0.9878283151825753\n",
+            "epoch: 850 || train loss: 0.040871165692806244 || test loss: 0.04408496990799904 || accuracy: 0.9878283151825753\n",
+            "epoch: 900 || train loss: 0.04776952788233757 || test loss: 0.05318393558263779 || accuracy: 0.985906470211403\n",
+            "epoch: 950 || train loss: 0.04114208742976189 || test loss: 0.04988250136375427 || accuracy: 0.9871877001921845\n",
+            "epoch: 1000 || train loss: 0.04607656970620155 || test loss: 0.05340217798948288 || accuracy: 0.9846252402306214\n"
           ]
         }
       ]
@@ -1262,7 +1250,7 @@
       "metadata": {
         "id": "g6ZnyyZR3QXe"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     }
   ]
